target/generated-sources/antlr4/main/antlr/excalcor/ExCalcorParser.java
// Generated from ExCalcor.g4 by ANTLR 4.4
package main.antlr.excalcor;

import java.lang.Math;
import java.math.MathContext;
import java.math.BigDecimal;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExCalcorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__18=1, T__17=2, T__16=3, T__15=4, T__14=5, T__13=6, T__12=7, T__11=8, 
		T__10=9, T__9=10, T__8=11, T__7=12, T__6=13, T__5=14, T__4=15, T__3=16, 
		T__2=17, T__1=18, T__0=19, NUMBER=20, BOOLEAN=21, VARIABLE=22, BUILTINFUNC=23, 
		NEWLINE=24, SPACE=25;
	public static final String[] tokenNames = {
		"<INVALID>", "'%'", "')'", "'+'", "'-'", "'*'", "':'", "'('", "'<'", "'='", 
		"'!='", "'<='", "'&&'", "'?'", "'||'", "'>'", "'=='", "'/'", "'>='", "'!'", 
		"NUMBER", "BOOLEAN", "VARIABLE", "BUILTINFUNC", "NEWLINE", "SPACE"
	};
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_assignment = 2, RULE_expression = 3, 
		RULE_condExpr = 4, RULE_orExpr = 5, RULE_andExpr = 6, RULE_equalityExpr = 7, 
		RULE_comparisonExpr = 8, RULE_addiExpr = 9, RULE_multExpr = 10, RULE_unaryExpr = 11, 
		RULE_builtInFunc = 12, RULE_brackets = 13, RULE_primary = 14, RULE_atom = 15;
	public static final String[] ruleNames = {
		"prog", "statement", "assignment", "expression", "condExpr", "orExpr", 
		"andExpr", "equalityExpr", "comparisonExpr", "addiExpr", "multExpr", "unaryExpr", 
		"builtInFunc", "brackets", "primary", "atom"
	};

	@Override
	public String getGrammarFileName() { return "ExCalcor.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExCalcorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(32); statement();
				}
				}
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__12) | (1L << T__0) | (1L << NUMBER) | (1L << VARIABLE) | (1L << BUILTINFUNC) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ExpressionContext expression;
		public TerminalNode NEWLINE() { return getToken(ExCalcorParser.NEWLINE, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(45);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37); assignment();
				setState(38); match(NEWLINE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(40); ((StatementContext)_localctx).expression = expression();
				setState(41); match(NEWLINE);

				       if (((StatementContext)_localctx).expression.value != null) {
				         System.out.println(((StatementContext)_localctx).expression.value);
				       }
				     
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44); match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public Token VARIABLE;
		public ExpressionContext expression;
		public TerminalNode VARIABLE() { return getToken(ExCalcorParser.VARIABLE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); ((AssignmentContext)_localctx).VARIABLE = match(VARIABLE);
			setState(48); match(T__10);
			setState(49); ((AssignmentContext)_localctx).expression = expression();

			       ExCalcorRunner.memory.put((((AssignmentContext)_localctx).VARIABLE!=null?((AssignmentContext)_localctx).VARIABLE.getText():null), ((AssignmentContext)_localctx).expression.value);
			     
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public BigDecimal value;
		public CondExprContext condExpr;
		public CondExprContext condExpr() {
			return getRuleContext(CondExprContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); ((ExpressionContext)_localctx).condExpr = condExpr();

			       ((ExpressionContext)_localctx).value =  ((ExpressionContext)_localctx).condExpr.value;
			     
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondExprContext extends ParserRuleContext {
		public BigDecimal value;
		public OrExprContext a;
		public ExpressionContext b;
		public ExpressionContext c;
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public OrExprContext orExpr() {
			return getRuleContext(OrExprContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public CondExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterCondExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitCondExpr(this);
		}
	}

	public final CondExprContext condExpr() throws RecognitionException {
		CondExprContext _localctx = new CondExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); ((CondExprContext)_localctx).a = orExpr();

			       ((CondExprContext)_localctx).value =  ((CondExprContext)_localctx).a.value;
			     
			setState(63);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(57); match(T__6);
				setState(58); ((CondExprContext)_localctx).b = expression();
				setState(59); match(T__13);
				setState(60); ((CondExprContext)_localctx).c = expression();

				            // 如果 a 的值不等于零(即为真值)，则返回 b 的值
				            if (((CondExprContext)_localctx).a.value.compareTo(BigDecimal.ZERO) != 0) {
				              ((CondExprContext)_localctx).value =  ((CondExprContext)_localctx).b.value;
				            // 否则返回 c 的值
				            } else {
				              ((CondExprContext)_localctx).value =  ((CondExprContext)_localctx).c.value;
				            }
				          
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrExprContext extends ParserRuleContext {
		public BigDecimal value;
		public AndExprContext a;
		public AndExprContext b;
		public AndExprContext andExpr(int i) {
			return getRuleContext(AndExprContext.class,i);
		}
		public List<AndExprContext> andExpr() {
			return getRuleContexts(AndExprContext.class);
		}
		public OrExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterOrExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitOrExpr(this);
		}
	}

	public final OrExprContext orExpr() throws RecognitionException {
		OrExprContext _localctx = new OrExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_orExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); ((OrExprContext)_localctx).a = andExpr();

			       ((OrExprContext)_localctx).value =  ((OrExprContext)_localctx).a.value;
			     
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(67); match(T__5);
				setState(68); ((OrExprContext)_localctx).b = andExpr();

				            // 任意一个不等于零则返回1(true)
				            if ((((OrExprContext)_localctx).a.value.compareTo(BigDecimal.ZERO) != 0) || 
				                (((OrExprContext)_localctx).b.value.compareTo(BigDecimal.ZERO) != 0)) {
				              ((OrExprContext)_localctx).value =  new BigDecimal(1, new MathContext(15));
				            // 否则则返回0(false)
				            } else {
				              ((OrExprContext)_localctx).value =  new BigDecimal(0, new MathContext(15));
				            }
				          
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndExprContext extends ParserRuleContext {
		public BigDecimal value;
		public EqualityExprContext a;
		public EqualityExprContext b;
		public EqualityExprContext equalityExpr(int i) {
			return getRuleContext(EqualityExprContext.class,i);
		}
		public List<EqualityExprContext> equalityExpr() {
			return getRuleContexts(EqualityExprContext.class);
		}
		public AndExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterAndExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitAndExpr(this);
		}
	}

	public final AndExprContext andExpr() throws RecognitionException {
		AndExprContext _localctx = new AndExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_andExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); ((AndExprContext)_localctx).a = equalityExpr();

			       ((AndExprContext)_localctx).value =  ((AndExprContext)_localctx).a.value;
			     
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(78); match(T__7);
				setState(79); ((AndExprContext)_localctx).b = equalityExpr();

				            // 两个均不等于零则返回1(true)
				            if ((((AndExprContext)_localctx).a.value.compareTo(BigDecimal.ZERO) != 0) && 
				                (((AndExprContext)_localctx).b.value.compareTo(BigDecimal.ZERO) != 0)) {
				              ((AndExprContext)_localctx).value =  new BigDecimal(1, new MathContext(15));
				            // 否则则返回0(false)
				            } else {
				              ((AndExprContext)_localctx).value =  new BigDecimal(0, new MathContext(15));
				            }
				       
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualityExprContext extends ParserRuleContext {
		public BigDecimal value;
		public ComparisonExprContext a;
		public ComparisonExprContext b;
		public List<ComparisonExprContext> comparisonExpr() {
			return getRuleContexts(ComparisonExprContext.class);
		}
		public ComparisonExprContext comparisonExpr(int i) {
			return getRuleContext(ComparisonExprContext.class,i);
		}
		public EqualityExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalityExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterEqualityExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitEqualityExpr(this);
		}
	}

	public final EqualityExprContext equalityExpr() throws RecognitionException {
		EqualityExprContext _localctx = new EqualityExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_equalityExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); ((EqualityExprContext)_localctx).a = comparisonExpr();

			       ((EqualityExprContext)_localctx).value =  ((EqualityExprContext)_localctx).a.value;
			     
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9 || _la==T__3) {
				{
				setState(97);
				switch (_input.LA(1)) {
				case T__3:
					{
					setState(89); match(T__3);
					setState(90); ((EqualityExprContext)_localctx).b = comparisonExpr();

					            // 如果等于则返回1(true)
					            if (((EqualityExprContext)_localctx).a.value.compareTo(((EqualityExprContext)_localctx).b.value) == 0) {
					              ((EqualityExprContext)_localctx).value =  new BigDecimal(1, new MathContext(15));
					            // 否则则返回0(false)
					            } else {
					              ((EqualityExprContext)_localctx).value =  new BigDecimal(0, new MathContext(15));
					            }
					          
					}
					break;
				case T__9:
					{
					setState(93); match(T__9);
					setState(94); ((EqualityExprContext)_localctx).b = comparisonExpr();

					            // 如果不等于则返回1(true)
					            if (((EqualityExprContext)_localctx).a.value.compareTo(((EqualityExprContext)_localctx).b.value) != 0) {
					              ((EqualityExprContext)_localctx).value =  new BigDecimal(1, new MathContext(15));
					            // 否则则返回0(false)
					            } else {
					              ((EqualityExprContext)_localctx).value =  new BigDecimal(0, new MathContext(15));
					            }
					          
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonExprContext extends ParserRuleContext {
		public BigDecimal value;
		public AddiExprContext a;
		public AddiExprContext b;
		public List<AddiExprContext> addiExpr() {
			return getRuleContexts(AddiExprContext.class);
		}
		public AddiExprContext addiExpr(int i) {
			return getRuleContext(AddiExprContext.class,i);
		}
		public ComparisonExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).enterComparisonExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExCalcorListener ) ((ExCalcorListener)listener).exitComparisonExpr(this);
		}
	}

	public final ComparisonExprContext comparisonExpr() throws RecognitionException {
		ComparisonExprContext _localctx = new ComparisonExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comparisonExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); ((ComparisonExprContext)_localctx).a = addiExpr();

			       ((ComparisonExprContext)_localctx).value =  ((ComparisonExprContext)_localctx).a.value;
			     
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__8) | (1L << T__4) | (1L << T__1))) != 0)) {
				{
				setState(120);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(104); match(T__4);
					setState(105); ((ComparisonExprContext)_localctx).b = addiExpr();

					            // 如果大于则返回1(true)
					            if (((ComparisonExprContext)_localctx).a.value.compareTo(((ComparisonExprContext)_localctx).b.value) == 1) {
					              ((ComparisonExprContext)_localctx).value =  new BigDecimal(1, new MathContext(15));
					            // 否则则返回0(false)
					            } else {
					              ((ComparisonExprContext)_localctx).value =  new BigDecimal(0, new MathContext(15));
					            }
					          
					}
					break;
				case T__11:
					{
					setState(108); match(T__11);
					setState(109); ((ComparisonExprContext)_localctx).b = addiExpr();

					            // 如果小于则返回1(true)
					            if (((ComparisonExprContext)_localctx).a.value.compareTo(((ComparisonExprContext)_localctx).b.value) == -1) {
					              ((ComparisonExprContext)_localctx).value =  new BigDecimal(1, new MathContext(15));
					            // 否则则返回0(false)
					            } else {
					              ((ComparisonExprContext)_localctx).value =  new BigDecimal(0, new MathContext(15));
					            }
					          
					}
					break;
				case T__1:
					{
					setState(112); match(T__1);
					setState(113); ((ComparisonExprContext)_localctx).b = addiExpr();

					            // 如果大于等于则返回1(true)
					            if ((((ComparisonExprContext)_localctx).a.value.compareTo(((ComparisonExprContext)_localctx).b.value) == 1) || (((ComparisonExprContext)_localctx).a.value.compareTo(((ComparisonExprContext)_localctx).b.value) == 0)) {
					              ((ComparisonExprContext)_localctx).value =  new BigDecimal(1, new MathContext(15));
					            // 否则则返回0(false)
					            } else {
					              ((ComparisonExprContext)_localctx).value =  new BigDecimal(0, new MathContext(15));
					            }
					          
					}
					break;
				case T__8:
					{
					setState(116); match(T__8);
					setState(117); ((ComparisonExprContext)_localctx).b = addiExpr();

					            // 如果小于等于则返回1(true)
					            if ((((ComparisonExprContext)_localctx).a.value.compareTo(((ComparisonExprContext)_localctx).b.value) == -1) || (((ComparisonExprContext)_localctx).a.value.compareTo(((ComparisonExprContext)_localctx).b.value) == 0)) {
					              ((ComparisonExprContext)_localctx).value =  new BigDecimal(1, new MathContext(15));
					            // 否则则返回0(false)
					            } else {
